--- a/views/act_form.html
+++ b/views/act_form.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include "header_new.html" %}
-<!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav.css" >
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_ninth.css" >
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_tenth.css" >
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/layout.css" >
-<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/expertunscramble.css">-->
+ <!--[if lt IE 9]>
+  <script src="{{helper.cdnhost}}/assets/js/upgrade.js"></script>
+  <![endif]-->
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
 <style>
  .act_form {
