--- a/views/act_form.html
+++ b/views/act_form.html
@@ -137,7 +137,7 @@
   }
 #gerenjieshao {
   width: 1052px;
-  margin: 30px;
+  margin: 30px 30px 60px 30px;
   height: 188px;
   background: #f8f8f8;
   border: 0;
@@ -163,8 +163,8 @@
    padding: 30px 10px;
  }
   .attach_upload_btn{
-    width: 50px;
-    height: 50px;
+    width: 175px;
+    height: 175px;
     border: 1px solid #C13232;
     background-color: #f8f8f8;
     text-align: center;
@@ -174,6 +174,8 @@
  .attach_upload_btn i {
    font-size: 50px;
    color: #C13232;
+   display: block;
+   margin-top: 60px;
  }
   .attach_item {
     width: 900px;
@@ -208,21 +210,42 @@
   	margin-left: -200px;
   	cursor: pointer;
   }
+  .act_form_tu {
+    width:100%;
+    height:auto;
+    background-image: url({{helper.cdnhost}}/assets/img/zhuanxiang.png);padding-top: 300px;background-repeat: no-repeat;background-size: 100% auto;
+  }
+  h1 {
+    font-size: 18px
+  }
+  .act_form_biaoti {
+    width: 16px;
+    margin-top: 5px;
+    margin-right:8px;
+    height: 20px;
+    background: #C13232;
+    float: left;
+  }
+.act_form_diye {
+  width:100%;
+  height:60px;
+  background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;line-height: 60px;color: #fff;font-size: 14px;
+}
 </style>
 <!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/academy3.css"/>-->
 <script>
   var AD_PAGE_NAME = "PROFILE";
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<body >
+<body>
   {% include "widget/top/top.html" %}
   {% import "widget/new_nav_first/common_nav.html" as common_nav %}
   {{ common_nav.common_nav(tdk,helper) }}
-  <div style="width:100%;height:auto;background-image: url({{helper.cdnhost}}/assets/img/zhuanxiang.png);padding-top: 300px;background-repeat: no-repeat;background-size: 100% auto;" class="clearfix" >
+  <div class="clearfix act_form_tu" >
   <div class="act_form clearfix">
     <img style="display:block;" src="{{helper.cdnhost}}/assets/img/bioadantiaojiao.png" alt="">
-    <h1>
-      <div style="width: 16px;margin-top: 5px;margin-right:8px;height: 20px; background: #C13232;float: left;">
+    <h1 style="margin-top: 40px;">
+      <div class="act_form_biaoti">
       </div>建议类型
     </h1>
     <div class="act_form_xian"></div>
@@ -248,8 +271,8 @@
   <input type="radio" name="pay2" value="23" id="liu-2-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-3">营销文案策划</label>
   <input  type="radio" name="pay2" value="24" id="liu-2-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-4">前端设计</label>
 </div>
-  <div style="margin-top: 20px">
-    <h1><div style="width: 16px;margin-top: 8px;margin-right:8px;height: 20px; background: #C13232;float: left;"></div>问题简述</h1>
+  <div>
+    <h1 style="margin-top: 40px"><div class="act_form_biaoti"></div>问题简述</h1>
     <div class="act_form_xian"></div>
   </div>
   <div class="content_title_bbb clearfix">
@@ -259,7 +282,7 @@
 
 
   <div>
-    <h1><div style="width: 16px;margin-top: 8px;margin-right:8px;height: 20px; background: #C13232;float: left;"></div>上传建议附件</h1>
+    <h1><div class="act_form_biaoti"></div>上传建议附件</h1>
     <div class="act_form_xian"></div>
     <div class="attachment_box clearfix">
       <form id="attachmentForm" style="display: none;">
@@ -273,7 +296,7 @@
   	<span class="act-form-btn">提交建议</span>
   </div>
 </div>
-    <div style="width:100%;height:60px;background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;line-height: 60px;color: #fff;font-size: 14px;">点击此处查看招聘职位<i class="iconfont" style="padding: 0 5px;">&#xe636;</i><a href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331" style="font-size: 20px;color: #fff;;">虚位以待</a></div>
+    <div class="act_form_diye"style="">点击此处查看招聘职位<i class="iconfont" style="padding: 0 5px;">&#xe636;</i><a href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331" style="font-size: 20px;color: #fff;;">虚位以待</a></div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_FEEDBACK_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
