--- a/views/act_form.html
+++ b/views/act_form.html
@@ -14,14 +14,15 @@
  }
  .act_form_con_2 label{
    font-weight: normal;
-   margin-right: 155px;
+   margin-right: 148px;
    margin-top: 10px;
+   font-size: 14px;
  }
  .act_form_con label{
    font-weight: normal;
-   margin-left: 40px;
-   margin-right: 110px;
+   margin-right: 148px;
    margin-top: 10px;
+   font-size: 14px;
  }
  .act_form_con_3 label{
    font-weight: normal;
@@ -132,22 +133,24 @@
    clip: rect(0, 0, 0, 0);
  }
   .act_form_con {
-    width: 1180px;
+    width: 1120px;
     height: 40px;
+    margin-top: 26px;
   }
 #gerenjieshao {
   width: 1052px;
-  margin: 30px 30px 60px 30px;
+  margin: 30px;
   height: 188px;
   background: #f8f8f8;
   border: 0;
+
 }
   .act_form_xian {
-    width: 1090px;
+    width: 1088px;
     height: 1px;
     border-bottom:1px solid #C13232 ;
     border-top:1px solid #C13232;
-    margin: 0 10px;
+    margin-left: 16px;
   }
  .word-num {
    position: absolute;
@@ -194,6 +197,8 @@
   }
   .content_title_bbb {
     position: relative;
+    margin-top: 40px;
+    box-shadow: 0px 1px 7px 3px rgba(0,0,0,0.1);
   }
   .act-form-btn{
   	display: block;
@@ -257,10 +262,10 @@
       <input  type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0;margin-left: 0;" for="liu5">人力资源</label>
   </div>
 
-<div class="act_form_con_2 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back.png);background-size:cover;height: 50px;line-height: 38px;display: none;">
+<div class="act_form_con_2 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back.png);background-size:cover;height: 50px;line-height: 38px;display: none;width: 1108px;>
   <input  type="radio" name="pay1" value="11" id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
   <input  type="radio" name="pay1" value="12" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
-  <input type="radio" name="pay1" value="13" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
+  <input type="radio" name="pay1" value="13" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">UI设计</label>
   <input  type="radio" name="pay1" value="14" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
   <input type="radio" name="pay1" value="15" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
 </div>
@@ -282,7 +287,7 @@
 
 
   <div>
-    <h1><div class="act_form_biaoti"></div>上传建议附件</h1>
+    <h1 style="margin-top: 60px"><div class="act_form_biaoti"></div>上传建议附件</h1>
     <div class="act_form_xian"></div>
     <div class="attachment_box clearfix">
       <form id="attachmentForm" style="display: none;">
@@ -292,7 +297,7 @@
       <div class="attach_item"></div>
     </div>
   </div>
-  <div style="position: relative;height:40px;margin-top: 10px;margin-bottom: 40px;">
+  <div style="position: relative;height:40px;margin-top: 70px;margin-bottom: 40px;">
   	<span class="act-form-btn">提交建议</span>
   </div>
 </div>
