--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -1,8 +1,8 @@
 <!--右侧在线咨询-->
 
 {% macro leyu_slide(path,user,login_info,helper) %}
-<div class="mui-mbar-tabs" style="z-index:999;height: 566px;bottom: 86px;">
-  <div class="quick_links_wrap quick_links_dockright" style="height: 566px;bottom: 86px;">
+<div class="mui-mbar-tabs" style="z-index:999;height: 566px;bottom: 86px;*bottom:170px;">
+  <div class="quick_links_wrap quick_links_dockright" style="height: 566px;bottom: 86px;*bottom:170px;">
     <div class="quick_link_mian" style="margin-top: 86px;">
 
       <div class="quick_links_panel">
