--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -17,7 +17,7 @@
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
             <span>在<br>线<br>评<br>估</span>
             <div id="comment_con"
-                 style="width: 280px;background: #fff;right: 46px;top: -52px;margin-top:92px;position: absolute;border: 1px solid #dcdcdc;display: none">
+                 style="width: 280px;background: #fff;right: 46px;top: -52px;margin-top:92px;*margin-top:182px;position: absolute;border: 1px solid #dcdcdc;display: none">
               <div id="comment_close" style="margin-left: 5px;font-size: 15px;cursor: pointer; color:#333333;">x</div>
               <!--  <iframe id="floatUrls" style="width: 100%;height:100%;" frameborder="no" border="0"
                        marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"
