--- a/views/country_list.html
+++ b/views/country_list.html
@@ -36,10 +36,10 @@
         left: 50%;
     }
   .select-list{
-    width: 728px;
+    width: 756px;
   }
   .foucus-public-d li{
-    margin: 5px 0 5px 0;
+    margin: 5px 2px 5px 0;
   }
   .main-left{
     padding: 0 20px;
@@ -48,8 +48,8 @@
     border-top: 0;
     border-bottom: 1px solid #dcdcdc;
   }
-    .foucus-public{
-      border-bottom: 1px solid #dcdcdc;
+    .main-left .result-type-bar{
+      padding-top: 16px;
     }
 </style>
 <body style="background: #f5f5f5">
@@ -170,7 +170,7 @@
       %}
       <div class="dui-layout-con  study-focus">
         <div class="select-country  foucus-public foucus-public-d clearfix">
-          <p><span>留学国家及地区：</span></p>
+          <p><span>国家及地区：</span></p>
           <ul class="select-list">
             {% for cItem in countryList %}
             <li data-id="{{cItem.id}}"><a href="" class={{'focus-on' if cItem.id == country else ""}}>{{cItem.country}}</a></li>
