--- a/views/act_form.html
+++ b/views/act_form.html
@@ -234,6 +234,11 @@
   height:60px;
   background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;line-height: 60px;color: #fff;font-size: 14px;
 }
+  .act_form_tu_xion {
+    width:100%;
+    height:668px;
+    background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);background-repeat: no-repeat;background-size: 100% auto;position: absolute;bottom: 0px;z-index: -100;
+  }
 </style>
 <!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/academy3.css"/>-->
 <script>
@@ -245,6 +250,7 @@
   {% import "widget/new_nav_first/common_nav.html" as common_nav %}
   {{ common_nav.common_nav(tdk,helper) }}
   <div class="clearfix act_form_tu" >
+    <div class="act_form_tu_xion"></div>
   <div class="act_form clearfix">
     <img style="display:block;" src="{{helper.cdnhost}}/assets/img/bioadantiaojiao.png" alt="">
     <h1 style="margin-top: 40px;">
@@ -299,7 +305,7 @@
   	<span class="act-form-btn">提交建议</span>
   </div>
 </div>
-  <div  style=" width:100%;height:auto;background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);padding-bottom: 768px;background-repeat: no-repeat;background-size: 100% auto;position: absolute;bottom: 0px;z-index: -100;"></div>
+
     <div class="act_form_diye"style="">点击此处查看招聘职位<i class="iconfont" style="padding: 0 5px;">&#xe636;</i><a href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331" style="font-size: 20px;color: #fff;;">虚位以待</a></div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_FEEDBACK_SEAT10",helper) }}
