--- a/views/country_list.html
+++ b/views/country_list.html
@@ -173,7 +173,7 @@
           <p><span>留学国家及地区：</span></p>
           <ul class="select-list">
             {% for cItem in countryList %}
-            <li data-id="{{cItem.id}}"><a href="" class={{'focus-on' if cItem.id == country else ""}}>{{cItem.country}}</a></li>
+            <li data-id="{{cItem.id}}"><a href="{{helper.active_urlgen('articles','n=' + country, ('type=' + type) if type else '',('tag=' + tag) if tag else '',('order=' + order) if order else '')}}" class={{'focus-on' if cItem.id == country else ""}}>{{cItem.country}}</a></li>
             {% endfor %}
           </ul>
         </div>
@@ -212,7 +212,7 @@
           <p><span>文章类别：</span></p>
           <ul class="select-list">
             {% for item in crowdType %}
-            <li data-id="{{item.id}}"><a href="" class={{'focus-on' if item.id == type else ""}}>{{item.type}}</a></li>
+            <li data-id="{{item.id}}"><a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', 'type='+ item.id,('tag=' + tag) if tag else '',('order=' + order) if order else '')}}" class={{'focus-on' if item.id == type else ""}}>{{item.type}}</a></li>
             {% endfor %}
           </ul>
         </div>
@@ -254,16 +254,18 @@
       }
       ]
       %}
+      {% if type != 5 %}
       <div class="dui-layout-con study-focus" >
         <div class="select-article-type  foucus-public foucus-public-d clearfix">
           <p><span>文章标签：</span></p>
           <ul class="select-list">
             {% for item in arcType %}
-            <li data-id="{{item.id}}"><a href="" class={{'focus-on' if item.id == type else ""}}>{{item.type}}</a></li>
+            <li data-id="{{item.id}}"><a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', ('type=' + type) if type else '','tag='+ item.id,('order=' + order) if order else '')}}" class={{'focus-on' if item.id == tag else ""}}>{{item.type}}</a></li>
             {% endfor %}
           </ul>
         </div>
       </div>
+        {% endif %}
         <div class="main-left clearfix">
           <div class="result-bar">
            <span id="result-keyword">{{keyword | ellipsis(45)}}</span>共检索到<span id="result-num">{{article_list.total if article_list.total else 0}}</span>个结果
