--- a/views/act_form.html
+++ b/views/act_form.html
@@ -26,7 +26,7 @@
  .act_form_con_3 label{
    font-weight: normal;
    margin-left: 50px;
-   margin-right: 130px;
+   margin-right: 125px;
    margin-top: 10px;
  }
 
@@ -196,6 +196,7 @@
   .content_title_bbb {
     position: relative;
     margin-top: 40px;
+    background: #fff;
     box-shadow: 0px 1px 7px 3px rgba(0,0,0,0.1);
   }
   .act-form-btn{
