--- a/views/act_form.html
+++ b/views/act_form.html
@@ -137,9 +137,12 @@
     margin-top: 26px;
   }
 #gerenjieshao {
-  width: 1052px;
+  width: 1000px;
   margin: 30px;
-  height: 188px;
+  padding: 30px;
+  height: 154px;
+  font-size: 16px;
+  color: #666666;
   background: #f8f8f8;
   border: 0;
 
@@ -233,7 +236,7 @@
 .act_form_diye {
   width:100%;
   height:60px;
-  background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;line-height: 60px;color: #fff;font-size: 14px;
+  background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;line-height: 60px;color: #fff;font-size: 20px;
 }
   .act_form_tu_xion {
     width:100%;
@@ -286,7 +289,7 @@
     <div class="act_form_xian"></div>
   </div>
   <div class="content_title_bbb clearfix">
-    <textarea id="gerenjieshao" maxlength="500" data-geren="{{userinfo.introduce}}"></textarea>
+    <textarea id="gerenjieshao" maxlength="500" data-geren="{{userinfo.introduce}}">请描述你的建议~</textarea>
     <div class="word-num">还可以输入<span id="word-num">120</span>字</div>
   </div>
 
@@ -307,7 +310,7 @@
   </div>
 </div>
 
-    <div class="act_form_diye"style="">点击此处查看招聘职位<i class="iconfont" style="padding: 0 5px;">&#xe636;</i><a href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331" style="font-size: 20px;color: #fff;;">虚位以待</a></div>
+    <div class="act_form_diye"style="">点击此处查看招聘职位<i class="iconfont" style="padding: 0 5px;">&#xe636;</i><a target="_blank" href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331" style="font-size: 30px;color: #fff;;">虚位以待</a></div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_FEEDBACK_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
