--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -188,6 +188,9 @@
       }
     })
   }
+  function stick (thisObj, uId, articleId) {
+    console.log($(thisObj).parents('.article-list-item').html());
+  }
 </script>
 {% endmacro %}
 
