--- a/views/act_form.html
+++ b/views/act_form.html
@@ -13,15 +13,15 @@
  }
  .act_form_con_2 label{
    font-weight: normal;
-   margin-right: 169px;
+   margin-right: 158px;
    margin-top: 10px;
    font-size: 14px;
  }
  .act_form_con label{
    font-weight: normal;
-   margin-right: 169px;
+   margin-right: 158px;
    margin-top: 10px;
-   font-size: 14px;
+   font-size: 16px;
  }
  .act_form_con_3 label{
    font-weight: normal;
@@ -227,7 +227,7 @@
   }
   .act_form_biaoti {
     width: 16px;
-    margin-top: 5px;
+    margin-top: 6px;
     margin-right:8px;
     height: 20px;
     background: #C13232;
@@ -235,12 +235,12 @@
   }
 .act_form_diye {
   width:100%;
-  height:60px;
-  background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;line-height: 60px;color: #fff;font-size: 20px;
+  height:320px;
+  background-image: url({{helper.cdnhost}}/assets/img/diditu.jpg);background-repeat: no-repeat;background-size: cover;text-align: center;color: #fff;font-size: 20px;background-position: center 0;
 }
   .act_form_tu_xion {
     width:100%;
-    height:668px;
+    height:968px;
     background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);background-repeat: no-repeat;background-size: 100% auto;position: absolute;bottom: 0px;z-index: -100;
   }
 </style>
@@ -270,7 +270,7 @@
       <input  type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0;margin-left: 0;" for="liu5">人力资源</label>
   </div>
 
-<div class="act_form_con_2 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back.png);background-size:cover;height: 50px;line-height: 38px;display: none;width: 1180px;">
+<div class="act_form_con_2 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back.png);background-size:cover;height: 50px;line-height: 38px;display: none;width: 1186px;">
   <input  type="radio" name="pay1" value="11" id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
   <input  type="radio" name="pay1" value="12" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
   <input type="radio" name="pay1" value="13" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">UI设计</label>
@@ -278,7 +278,7 @@
   <input type="radio" name="pay1" value="15" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
 </div>
 
-<div class="act_form_con_3 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back1.png);background-size:cover;height: 50px;line-height: 38px;display: none;width: 1180px">
+<div class="act_form_con_3 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back1.png);background-size:cover;height: 50px;line-height: 38px;display: none;width: 1186px">
   <input  type="radio" name="pay2" value="21" id="liu-2-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-1">交互设计</label>
   <input  type="radio" name="pay2" value="22" id="liu-2-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-2-2">专题设计</label>
   <input type="radio" name="pay2" value="23" id="liu-2-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-3">营销文案策划</label>
@@ -310,7 +310,7 @@
   </div>
 </div>
 
-    <div class="act_form_diye"style="">点击此处查看招聘职位<i class="iconfont" style="padding: 0 5px;">&#xe636;</i><a target="_blank" href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331" style="font-size: 30px;color: #fff;;">虚位以待</a></div>
+    <a target="_blank" href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331"><div class="act_form_diye"></div></a>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_FEEDBACK_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
