--- a/views/act_form.html
+++ b/views/act_form.html
@@ -219,6 +219,7 @@
   }
   .act_form_tu {
     width:100%;
+    min-width:1180px;
     height:auto;
     background-image: url({{helper.cdnhost}}/assets/img/zhuanxiang.png);padding-top: 300px;background-repeat: no-repeat;background-size: 100% auto;
   }
@@ -240,6 +241,7 @@
 }
   .act_form_tu_xion {
     width:100%;
+    min-width:1180px;
     height:668px;
     background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);background-repeat: no-repeat;background-size: 100% auto;position: absolute;bottom: 0px;z-index: -100;
   }
