--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -118,7 +118,7 @@
             {{article.article_info.message | safe}}
           </div>
           <div class="userinfo-box clearfix" >
-            <img class="userinfo-img" src="{{userinfo.qrcode}}" >
+            <img class="userinfo-img" src="{{userinfo.qrcode}}!76x76" >
             <div class="userinfo-right" >
               <div >
                 <i class="userinfo-name">{{userinfo.realname}}</i>
@@ -186,9 +186,9 @@
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/article_detail.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/article_detail.js"></script>
   <script>
-  $(function(){
+    $(function(){
       $('.banner-box-left .slider').xSlider({
           current: 0,
           speed: 500,
@@ -203,100 +203,100 @@
           slidesPerGroup : 2,
           pagination: true
       });
-    window._bd_share_config={
-          "common":{
-              "bdSnsKey":{},
-              "bdText":"",
-              "bdMini":"1",
-              "bdMiniList":false,
-              "bdPic":$("#get-share-img").attr('data-img'),
-              "bdStyle":"0",
-              "bdSize":"16",
-              "bdUrl":window.location.href,
-              "bdDesc":''
+      window._bd_share_config={
+            "common":{
+                "bdSnsKey":{},
+                "bdText":"",
+                "bdMini":"1",
+                "bdMiniList":false,
+                "bdPic":$("#get-share-img").attr('data-img'),
+                "bdStyle":"0",
+                "bdSize":"16",
+                "bdUrl":window.location.href,
+                "bdDesc":''
+            },
+            "share":{}
+        };
+        // console.log(_bd_share_config.common.bdUrl)
+      with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+      $("#collection").on("click",function(){
+        //文章收藏按钮
+        var that =this;
+        $.ajax({
+          url: '/soapi/favorite_article',
+          type:'POST',
+          data:{
+            article_id:article_id
           },
-          "share":{}
-      };
-      // console.log(_bd_share_config.common.bdUrl)
-    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
-    $("#collection").on("click",function(){
-      //文章收藏按钮
-      var that =this;
-      $.ajax({
-        url: '/soapi/favorite_article',
-        type:'POST',
-        data:{
-          article_id:article_id
-        },
-        dataType:'jsonp',
-        jsonpCallback:'cb',
-        success:function(result){
-         console.log(result)
-          if(result.code == 0){
-            if(result.data.action=='add'){
-              layer.msg('收藏成功');
-              $(that).html('已收藏');
-              $('#collection-num').text(Number(Number($('#collection-num').text())+1));
-            }else if(result.data.action=='remove'){
-              layer.msg('取消收藏成功');
-              $(that).html('收藏');
-              $('#collection-num').text(Number($('#collection-num').text()-1));
+          dataType:'jsonp',
+          jsonpCallback:'cb',
+          success:function(result){
+           console.log(result)
+            if(result.code == 0){
+              if(result.data.action=='add'){
+                layer.msg('收藏成功');
+                $(that).html('已收藏');
+                $('#collection-num').text(Number(Number($('#collection-num').text())+1));
+              }else if(result.data.action=='remove'){
+                layer.msg('取消收藏成功');
+                $(that).html('收藏');
+                $('#collection-num').text(Number($('#collection-num').text()-1));
+              }
+            }else if(result.code == 1){
+              getlogin();
             }
-          }else if(result.code == 1){
-            getlogin();
+          },
+          error:function(XMLHttpRequest, textStatus, errorThrown){
+            console.log(errorThrown)
           }
-        },
-        error:function(XMLHttpRequest, textStatus, errorThrown){
-          console.log(errorThrown)
-        }
+        });
       });
-    });
-    $("#fabulous").on("click",function(){
-      //点赞
-      if( login_ss == undefined){
-        getlogin();
-        return false;
-      }
-      if(login_ss.uid == adviserId){
-        layer.msg('不能对自己发表的内容进行投票')
-        return false;
-      } 
-      var that =this;
-      $.ajax({
-        url: '/soapi/article_vote',
-        type:'POST',
-        data:{
-          item_id:article_id,
-          item_type:'article'
-        },
-        dataType:'jsonp',
-        jsonpCallback:'cb',
-        success:function(result){
-         console.log(result)
-          if(result.code == 0){
-            if(result.data.action=='add'){
-              layer.msg('点赞成功');
-              $(that).find('i').html('&#xe604;');
-              $('#fabulous-num').text(Number(Number($('#fabulous-num').text())+1));
-            }else if(result.data.action == 'remove'){
-              layer.msg('取消点赞成功');
-              $(that).find('i').html('&#xe651;');
-              $('#fabulous-num').text(Number(Number($('#fabulous-num').text())-1));
-            }  
-           
+      $("#fabulous").on("click",function(){
+        //点赞
+        if( login_ss == undefined){
+          getlogin();
+          return false;
+        }
+        if(login_ss.uid == adviserId){
+          layer.msg('不能对自己发表的内容进行投票')
+          return false;
+        } 
+        var that =this;
+        $.ajax({
+          url: '/soapi/article_vote',
+          type:'POST',
+          data:{
+            item_id:article_id,
+            item_type:'article'
+          },
+          dataType:'jsonp',
+          jsonpCallback:'cb',
+          success:function(result){
+           console.log(result)
+            if(result.code == 0){
+              if(result.data.action=='add'){
+                layer.msg('点赞成功');
+                $(that).find('i').html('&#xe604;');
+                $('#fabulous-num').text(Number(Number($('#fabulous-num').text())+1));
+              }else if(result.data.action == 'remove'){
+                layer.msg('取消点赞成功');
+                $(that).find('i').html('&#xe651;');
+                $('#fabulous-num').text(Number(Number($('#fabulous-num').text())-1));
+              }  
+             
+            }
+          },
+          error:function(XMLHttpRequest, textStatus, errorThrown){
+             console.log(errorThrown)
           }
-        },
-        error:function(XMLHttpRequest, textStatus, errorThrown){
-           console.log(errorThrown)
-        }
+        });
       });
-    });
-    $('.art-report-btn').on('click',function(){
-      //文章举报
-      report(this,1,city_id);
-    });
-    watermark();
-  })
+      $('.art-report-btn').on('click',function(){
+        //文章举报
+        report(this,1,city_id);
+      });
+      watermark();
+    })
     function watermark() {
       var oTemp = document.createDocumentFragment();
       var mask_div = document.createElement('div');
