--- a/views/widget/nav_tenth/nav_tenth.html
+++ b/views/widget/nav_tenth/nav_tenth.html
@@ -41,6 +41,6 @@
           <a href="{{ helper.urlgen(item.pageroute) }}" rel="nofollow" class="nav-tenth-on" style="color:#ffffff;">{{ item.navtext }}</a>
           {% endif %}
         {% endfor %}
-        <a target="_blank" href="http://special.zhaopin.com/bj/2015/jjl032714/enter.html" rel="nofollow">诚聘英才</a>
+        <a target="_blank" href="{{ helper.urlgen('employment') }}" rel="nofollow">诚聘英才</a>
       </div>
   </div>
