--- a/views/country_list.html
+++ b/views/country_list.html
@@ -212,7 +212,7 @@
           <p><span>文章类别：</span></p>
           <ul class="select-list">
             {% for item in crowdType %}
-            <li data-id="{{item.id}}"><a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', 'type='+ item.id,('tag=' + tag) if (tag and item.id != 5) else '',('order=' + order) if order else '')}}" class={{'focus-on' if item.id == type else ""}}>{{item.type}}</a></li>
+            <li data-id="{{item.id}}"><a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', 'type='+ item.type,('tag=' + tag) if (tag and item.type != '时讯') else '',('order=' + order) if order else '')}}" class={{'focus-on' if item.type == type else ""}}>{{item.type}}</a></li>
             {% endfor %}
           </ul>
         </div>
@@ -254,13 +254,13 @@
       }
       ]
       %}
-      {% if type != 5 %}
+      {% if type != '时讯' %}
       <div class="dui-layout-con study-focus" >
         <div class="select-article-type  foucus-public foucus-public-d clearfix">
           <p><span>文章标签：</span></p>
           <ul class="select-list">
             {% for item in arcType %}
-            <li data-id="{{item.id}}"><a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', ('type=' + type) if type else '','tag='+ item.id,('order=' + order) if order else '')}}" class={{'focus-on' if item.id == tag else ""}}>{{item.type}}</a></li>
+            <li data-id="{{item.id}}"><a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', ('type=' + type) if type else '','tag='+ item.type,('order=' + order) if order else '')}}" class={{'focus-on' if item.type == tag else ""}}>{{item.type}}</a></li>
             {% endfor %}
           </ul>
         </div>
@@ -279,9 +279,9 @@
             {% else %}
             <div class="has-result">
                 <div class="result-type-bar" data-order="{{order}}" id="result-type-bar">
-                    <a href="{{helper.paramurlgen('so_article','q='+ keyword, 'order=score')}}" {% if order == 'score' %}class="active"{% else %}{% endif %}>综合</a>
-                    <a href="{{helper.paramurlgen('so_article','q='+ keyword, 'order=add_time')}}" {% if order == 'add_time' %}class="active"{% else %}{% endif %}>最新new</a>
-                    <a href="{{helper.paramurlgen('so_article','q='+ keyword, 'order=views')}}" {% if order == 'views' %}class="active"{% else %}{% endif %}>最热hot</a>
+                    <a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', ('type=' + type) if type else '',('tag=' + tag) if tag else '')}}" {% if order == 'score' %}class="active"{% else %}{% endif %}>综合</a>
+                    <a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', ('type=' + type) if type else '',('tag=' + tag) if tag else '','order=add_time')}}" {% if order == 'add_time' %}class="active"{% else %}{% endif %}>最新new</a>
+                    <a href="{{helper.active_urlgen('articles',('n=' + country) if country else '', ('type=' + type) if type else '',('tag=' + tag) if tag else '','order=views')}}" {% if order == 'views' %}class="active"{% else %}{% endif %}>最热hot</a>
                 </div>
                 <div class="result-conent" id="result-content">
                     {% for item in article_list.list %}
