--- a/views/about/employment.html
+++ b/views/about/employment.html
@@ -137,6 +137,9 @@
 
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
+<div class="dui-layout-lg" style="margin-top: 20px;height: 320px;">
+  <img src="{{helper.cdnhost}}/assets/img/zhaoping.jpg"  alt="">
+</div>
 <div class="dui-layout-lg" style="margin-top: 20px;">
   <div class="dui-layout-silde">
     <div class="lianxi-fangshi dui-box-shadow">
