--- a/views/act_form.html
+++ b/views/act_form.html
@@ -312,7 +312,7 @@
   </div>
 </div>
 
-    <a target="_blank" href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331"><div class="act_form_diye"></div></a>
+    <a target="_blank" href="{{ helper.urlgen('employment') }}"><div class="act_form_diye"></div></a>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_FEEDBACK_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
