--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -12,7 +12,7 @@
                 <ul>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/events') }}">大事记</a></li>
                     <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/cooperation') }}">商务合作</a></li>
-                    <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('employment') }}">诚聘英才</a></li>
+                    <li><a target="_blank"  rel="nofollow"   href="http://www.jjl.cn/zt/zhaopin/employment.html">诚聘英才</a></li>
                 </ul>
             </div>
             <div class="sitemap sitemap02">
