修改 图片，修改字体

--- a/views/act_form.html
+++ b/views/act_form.html
@@ -28,9 +28,10 @@
    margin-left: 50px;
    margin-right: 125px;
    margin-top: 10px;
+   font-size: 14px;
  }
 
- input[type="radio"]:checked+label {color: red;}
+ input[type="radio"]:checked+label {color: #C13232;}
 
  .act_form_con input[type="radio"] + label:before {
    content: "\a0"; /*不换行空格*/
