--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -118,7 +118,9 @@
             {{article.article_info.message | safe}}
           </div>
           <div class="userinfo-box clearfix" >
-            <img class="userinfo-img" src="{{userinfo.qrcode}}!76x76" >
+            {% if userinfo.qrcode %}
+              <img class="userinfo-img" src="{{helper.imageThumb(userinfo.qrcode,'76x76')}}" >
+            {% endif %}
             <div class="userinfo-right" >
               <div >
                 <i class="userinfo-name">{{userinfo.realname}}</i>
