--- a/views/widget/detail_bar/detail_bar.html
+++ b/views/widget/detail_bar/detail_bar.html
@@ -9,7 +9,7 @@
                 <a href="#" class="bds_qzone space" data-cmd="qzone" title="分享到QQ空间"></a>
             </div>
             <div class="option_buttons">
-                <span class="comments_num">{{article.article_info.comments + article.article_info.votes + article.article_info.views}}</span><span class="comment_text">评论</span><a href="javascript:;" class="iconfont comment_btn" id="fix_bar_comment">&#xe61c;</a>
+                <span class="comments_num" data-totalNum="{{article.article_info.votes + article.article_info.comments}}" id="totalNum"></span><span class="comment_text">评论</span><a href="javascript:;" class="iconfont comment_btn" id="fix_bar_comment">&#xe61c;</a>
             </div>
         </div>
     </div>
