--- a/views/center_case.html
+++ b/views/center_case.html
@@ -111,7 +111,7 @@
             {% if case_data.list.length > 0 %}
             <div class="right-main clearfix case-list-box">
                 {% for item in case_data.list %}
-                <div class="case-list-item">
+                <div class="case-list-item article-list-item">
                 {% import "widget2/article/article.html" as article_show %}
                 {{ article_show.article_edit(item, helper) }}
                   {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
@@ -204,7 +204,7 @@
             aItemHtml += '<span style="font-size: 12px;padding: 0 10px;height: 24px;margin-left: 20px;background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/yanse.png);background-size:cover ;border-radius:12px ;margin-top: -3px;text-align: center;line-height: 24px;color: #C13232;">'+item.tag_list+'</span>';
             aItemHtml += '</div>'+
                         '<div class="offer-opt-bar clearfix">'+
-                        '<div class="opt-btn red-border stick" onclick="stick($(this), '+item.ui+', '+item.id+')">'+
+                        '<div class="opt-btn red-border stick" onclick="stick($(this), '+item.uid+', '+item.id+')">'+
                         '<i class="iconfont">&#xe685;</i>'+
                         '<span>置顶</span>'+
                         '</div>'+
