解决图片超出问题

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -93,7 +93,7 @@
 </div>
 	<!-- 广告位图 -->
 	<div class="dui-layout-lg clearfix" style="margin-top:5px;width:1200px;">
-		<div class="home-guanggao" style="float:left;height:120px;margin-right:-20px;" id="AD_HOME_SEAT{{loop.index+10}}"></div>
+		<div class="home-guanggao" style="float:left;height:120px;margin-right:-20px;overflow:hidden;" id="AD_HOME_SEAT{{loop.index+10}}"></div>
 	</div>
 {% endfor %} {#国家end#}
 <script>
