--- a/views/center_article.html
+++ b/views/center_article.html
@@ -184,7 +184,7 @@
             }else if(item.user_info.usertype ==3){
               identity = 'canzan';
             }
-            aItemHtml += '<div class="art-box clearfix" >'+
+            aItemHtml += '<div class="article-list-item"><div class="art-box clearfix" >'+
                         '<a target="_blank" href="' +fn.urlgen(item.uid.toString()) +'">'+
                         '<div class="adviser-head" style="background:url(' + fn.avaterimg(item.uid, "small",item.user_info.status,item.user_info.version)+') no-repeat 0 0;background-size: 50px 50px;">'+
                         '</div>'+
@@ -231,7 +231,8 @@
             aItemHtml += '</div>'
             aItemHtml += '</div>'
 
-            aItemHtml += addBottom(item)
+            aItemHtml += addBottom(item);
+            aItemHtml += '</div>';
             return aItemHtml;
         }
         function addArticleImg (imgList) {
