--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -128,16 +128,13 @@
     </div>
     <div class="offer-opt-bar clearfix">
       <div class="opt-btn red-border stick" onclick="stick($(this), {{item.uid}}, {{item.id}})">
-        <i class="iconfont">&#xe685;</i>
-        <span>置顶</span>
+        <i class="iconfont">&#xe685;</i><span>置顶</span>
       </div>
       <div class="opt-btn red-border delete" onclick="deleteOffer($(this), {{item.uid}}, {{item.id}})">
-        <i class="iconfont">&#xe8c1;</i>
-        <span>删除</span>
+        <i class="iconfont">&#xe8c1;</i><span>删除</span>
       </div>
       <div class="opt-btn edit">
-        <i class="iconfont">&#xe61c;</i>
-        <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/postarticle', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/postarticle', item.id | string)}}{% endif %}">编辑</a>
+        <i class="iconfont">&#xe61c;</i><a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/postarticle', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/postarticle', item.id | string)}}{% endif %}">编辑</a>
       </div>
     </div>
     <p class="adviser-info-p">
@@ -208,6 +205,8 @@
         success: function (result) {
           console.log('置顶',result);
           if(result.code == 0){
+            console.log(parent);
+            console.log(parents);
             parents.prepend(parent);
             layer.msg('置顶成功');
           }else{
